--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -38,16 +38,16 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url "store" %}">All Categories</a>
                     {% for category in links %}
-                        <a class="dropdown-item" href="/store/{{category.slug}}">{{category.category_name}}</a>
+                        <a class="dropdown-item" href="/store/category/{{category.slug}}">{{category.category_name}}</a>
                     {% endfor %}
                 </div>
             </div>  <!-- category-wrap.// -->
         </div> <!-- col.// -->
         <a href="{% url "store" %}" class="btn btn-outline-primary">Store</a>
         <div class="col-lg  col-md-6 col-sm-12 col">
-            <form action="#" class="search">
+            <form action="{% url "search" %}" class="search" method='GET'>
                 <div class="input-group w-100">
-                    <input type="text" class="form-control" style="width:60%;" placeholder="Search">
+                    <input type="text" class="form-control" style="width:60%;" placeholder="Search" name='keyword'>
                     
                     <div class="input-group-append">
                       <button class="btn btn-primary" type="submit">
@@ -66,9 +66,9 @@
                                 <a href="./register.html"> Register</a>
                             </div>
                         </div>
-                        <a href="./cart.html" class="widget-header pl-3 ml-3">
+                        <a href="{% url "cart" %}" class="widget-header pl-3 ml-3">
                             <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-                            <span class="badge badge-pill badge-danger notify">0</span>
+                            <span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
                         </a>
                     </div> <!-- widgets-wrap.// -->
                 </div> <!-- col.// -->
