--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -6,8 +6,11 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
     <div class="container">
+        {% if 'search' in request.path %}
+        <h2 class="title-page">Search Reasult</h2>
+        {% else %}
         <h2 class="title-page">Our Store</h2>
-        
+        {% endif %}
     </div> <!-- container //  -->
     </section>
     <!-- ========================= SECTION INTRO END// ========================= -->
@@ -33,7 +36,7 @@
                     <ul class="list-menu">
                     <li><a href="{% url "store" %}">All Categories</a></li>
                     {% for category in links  %}
-                    <li><a href="/store/{{category.slug}}">{{category.category_name}}  </a></li>
+                    <li><a href="/store/category/{{category.slug}}">{{category.category_name}}  </a></li>
                     {% endfor %}
                     </ul>
     
@@ -127,6 +130,7 @@
     </header><!-- sect-heading -->
     
     <div class="row">
+        {% if products %}
         {% for product in products %}
         <div class="col-md-4">
             <figure class="card card-product-grid">
@@ -143,23 +147,43 @@
                             <del class="price-old">₹{{product.product_price}}</del>
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="#" class="btn btn-block btn-success">Added to cart </a>
+                    <a href="{{product.get_url}}" class="btn btn-block btn-primary">Buy Now </a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
         {% endfor %}
+        {% else %}
+        <div class="container">
+            <h4 class='text-center'>No match found :( </h4>
+        </div>
+        {% endif %}
         
     </div> <!-- row end.// -->
     
     
     <nav class="mt-4" aria-label="Page navigation sample">
-      <ul class="pagination">
-        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-      </ul>
+        {% if products.has_other_pages %}
+            <ul class="pagination">
+                {% if products.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{products.previous_page_number}}">Previous</a></li>
+                {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+                {% endif %}
+
+                {% for i in products.paginator.page_range %}
+                    {% if products.number == i %}
+                        <li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+                    {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                    {% endif %}
+                {% endfor %}
+                    {% if products.has_next %}
+                        <li class="page-item"><a class="page-link" href="?page={{products.next_page_number}}">Next</a></li>
+                    {% else %}
+                        <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+                    {% endif %}
+            </ul>
+        {% endif %}
     </nav>
     
         </main> <!-- col.// -->
