--- a/templates/base.html
+++ b/templates/base.html
@@ -48,10 +48,19 @@
 <!-- Bootstrap4 files-->
 <script src="{% static "js/bootstrap.bundle.min.js" %}" type="text/javascript"></script>
 <!-- custom javascript -->
-<script src="/static/js/script.js" type="text/javascript"></script>
+<script src="{% static "js/script.js" %}" type="text/javascript"></script>
 
 <script type="/static/text/javascript">
 /// some script
+const toastTrigger = document.getElementById('liveToastBtn')
+const toastLiveExample = document.getElementById('liveToast')
+
+if (toastTrigger) {
+  const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastLiveExample)
+  toastTrigger.addEventListener('click', () => {
+    toastBootstrap.show()
+  })
+}
 
 // jquery ready start
 $(document).ready(function() {
