--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -27,7 +27,7 @@
     <div class="row align-items-center">
         <div class="col-lg-2 col-md-3 col-6">
             <a href="{% url "home" %}" class="brand-wrap">
-                <img class="logo" src="/static/./images/logo.png">
+                <img class="logo" src="/static/./images/logo_gokart.png">
             </a> <!-- brand-wrap.// -->
         </div>
         <div class="col-lg col-sm col-md col-6 flex-grow-0">
@@ -59,13 +59,23 @@
         </div> <!-- col.// -->
         <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
                     <div class="d-flex justify-content-end mb-3 mb-lg-0">
+                        {% if user.id is None %}
                         <div class="widget-header">
                             <small class="title text-muted">Welcome guest!</small>
                             <div> 
-                                <a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-                                <a href="./register.html"> Register</a>
+                                <a href="{% url "login" %}">Sign in</a> <span class="dark-transp"> | </span>
+                                <a href="{% url "register" %}"> Register</a>
                             </div>
                         </div>
+                        {% else %}
+                        <div class="widget-header">
+                            <small class="title text-muted">Welcome {{user.first_name}}!</small>
+                            <div> 
+                                <a href="{% url "dashboard" %}">Dashboard</a> <span class="dark-transp"> | </span>
+                                <a href="{% url "logout" %}"> logout</a>
+                            </div>
+                        </div>
+                        {% endif %}
                         <a href="{% url "cart" %}" class="widget-header pl-3 ml-3">
                             <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
                             <span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
